[tool.poetry]
name = "radio-duck"
version = "0.1.2"
description = "duckDb server"
authors = ["vishnu rao"]
license = "mit license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
duckdb = "0.9.0"
fastapi = "0.109.1"
uvicorn = "0.23.2"
httpx = "^0.25.0"
pytz = "^2023.3.post1"
pyjwt = "2.4.0"
cryptography = "42.0.4"

[tool.poetry.group.dev.dependencies]
# poetry add pytest --group dev
pytest = "7.4.2"
black = "^23.9.1"
flake8-bugbear = "^23.9.16"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
preview = true
target-version = ['py310']

[pytest]
addopts = "-v"

[tool.isort]
skip = [".gitignore", ".dockerignore"]
extend_skip = [".md"]
profile = "black"

#[tool.flake8]
#refer to .flake8 file for the config.
